# dao/service_load_balance.go
@@ -35,13 +35,13 @@ func (t *LoadBalance) Find(c *gin.Context, tx *gorm.DB, search *LoadBalance) (*L
 	err := tx.SetCtx(public.GetGinTraceContext(c)).Where(search).Find(model).Error
 	return model, err
 }
-//
-//func (t *LoadBalance) Save(c *gin.Context, tx *gorm.DB) error {
-//	if err := tx.SetCtx(public.GetGinTraceContext(c)).Save(t).Error; err != nil {
-//		return err
-//	}
-//	return nil
-//}
+
+func (t *LoadBalance) Save(c *gin.Context, tx *gorm.DB) error {
+	if err := tx.SetCtx(public.GetGinTraceContext(c)).Save(t).Error; err != nil {
+		return err
+	}
+	return nil
+}
 //
 //func (t *LoadBalance) GetIPListByModel() []string {
 //	return strings.Split(t.IpList, ",")
